# mcu

./: .gitignore  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX.md  analyze_packet.py  debug_checksum.py  parse_serial_output.py  verify_optimized.py  verify_packet.py
esp/01s/: README.md  platformio.ini
esp/01s/src/: main.cpp
esp/esp32c3/: README.md  platformio.ini
esp/esp32c3/examples/: web_control_example.md
esp/esp32c3/src/: main.cpp
esp/esp32c3/test/: test_build.py
esp/esp32s3/remote_control/: .gitignore  CHANGELOG.md  platformio.ini
esp/src/: ultrasonic_sensor_demo.cpp
esp/src/US22310S/: README.md
esp/src/机械爪/: claw_control.cpp
esp/src/电机控制/: motor_control.cpp
esp/src/红外模块/: ir_web_server.cpp
esp8266/01s/: test_client.py
esp8266/c3/: PROJECT_COMPLETE.md  README.md
esp8266/c3/docs/: LUATOS_ESP32C3_FLASH_GUIDE.md  QUICK_START.md
esp8266/c3/examples/: stm32_example.c
esp8266/c3/src/: main.cpp
esp8266/c3/test/: test_protocol.py
esp8266/src/: five_pin_ultrasonic_demo.cpp  i2c_ultrasonic_demo.cpp
esp8266/src/US22310S/: platformio.ini
esp8266/src/机械爪/: main.cpp  simple_continuous_servo.cpp
esp8266/src/红外模块/: ir_receiver.cpp
stm32-mv5640-SPI/: README.md  board.md  color_trace.py  ili9341.py  main.py  qr_code_demo.py
stm32/STM32F103C8T6/led/: README.md  extra_script.py  platformio.ini  upload.py
stm32/stm32f103rct6/: .clang-format  .gitignore
stm32/stm32f103rct6/docs/: KEIL_AC6_PORTING.md
stm32/stm32f103rct6/remote_control_pio/: REMOTE_CONTROL_PROJECT_SUMMARY.md  USBASP_UPLOAD_GUIDE.md  compile_commands.json  platformio.ini  remote_control_analysis.md  upload_usbasp.ps1
stm32/stm32f103rct6/stm32_cmake/: .clangd
stm32/stm32f103rct6/stm32_cmake/build_cmake/: CMakeLists.txt  README.md  build.bat
stm32/stm32f103rct6/stm32_cmake/stm32_cmake_build/template/: CMakeLists.txt  STM32F103RCTX_FLASH.ld
stm32/stm32f103rct6/stm32_cmake/stm32_cmake_build/template/Core/Src/: main.cpp
stm32/stm32f103rct6/stm32_cmake/stm32_cmake_build/template/Core/Startup/: startup_stm32f103rctx.s
stm32/stm32f103rct6/stm32_i2c/: README.md  compile_commands.json
stm32/stm32f103rct6/stm32_remote_car/: BLUETOOTH_IMPLEMENTATION_SUMMARY.md  Button校准问题修复报告.md  README.md  parabolic_line_visualizer.py  parabolic_web_visualizer.html  platformio.ini  test_parabolic_algorithm.py  算法测试工具使用指南.md
stm32/stm32f103rct6/stm32_servo_templete/: README.md  迁移完成总结.md
stm32/stm32f103rct6/stm32_servo_templete/02_cmake_from_scratch/: CMakeLists.txt  README.md
stm32/stm32f103rct6/stm32_servo_templete/02_cmake_from_scratch/include/: main.h  pwm_driver.h
stm32/stm32f103rct6/stm32_servo_templete/02_cmake_from_scratch/scripts/: build.sh
stm32/stm32f103rct6/stm32_servo_templete/02_cmake_from_scratch/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm32_motor/: .gitignore  MDA12E11_SIGNAL_FIX.md  MOTOR_DEBUG_GUIDE.md  TEST_PROCEDURE.md  ble_demo.cpp  motor_driving.md
stm32_motor/Core/Inc/: adc.h  main.h  stm32f1xx_it.h  usart.h
stm32_motor/Core/Src/: adc.c  main.c  stm32f1xx_it.c  tim.c
stm32_motor/RCB6406_6412之应用-IO应用_电机驱动/: RCB6406_6412-DEMO.uvguix.Administrator  RCB6406_6412-DEMO.uvguix.blcoo  RCB6406_6412-DEMO.uvguix.myself  RCB6406_6412-DEMO.uvoptx  RCB6406_6412-DEMO.uvprojx
stm32_motor/RCB6406_6412之应用-IO应用_电机驱动/CMSIS/: core_cm3.h
stm32_motor/RCB6406_6412之应用-IO应用_电机驱动/Listings/: RCB6441-DEMO.map  startup_stm32f10x_hd.lst
stm32_motor/RCB6406_6412之应用-IO应用_电机驱动/Objects/: RCB6406_6412-DEMO_Target 1.dep  RCB6441-DEMO.axf  RCB6441-DEMO.build_log.htm  RCB6441-DEMO.hex  RCB6441-DEMO.htm  RCB6441-DEMO.lnp  RCB6441-DEMO_Target 1.dep  core_cm3.crf  led.crf  led.d  main.crf  main.d  main_test_simple.d  misc.crf  misc.d  moto.crf  moto.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.crf  stm32f10x_dbgmcu.d  stm32f10x_dma.crf  stm32f10x_dma.d  stm32f10x_exti.crf  stm32f10x_exti.d  stm32f10x_flash.crf  stm32f10x_flash.d  stm32f10x_fsmc.crf  stm32f10x_fsmc.d  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_i2c.crf  (+23 more)
stm32_motor/RCB6406_6412之应用-IO应用_电机驱动/USER/: main.c  main_test_inverted.c  main_test_pwm.c  main_test_simple.c  stm32f10x_it.c
stm32_motor/adc_demo/: main.c
stm32_motor/adc_demo/usart/: bsp_usart.c
stm32_motor/remote_control_demo/RCB6406_6412之应用-无线收发/: RCB6406_6412-DEMO.uvguix.blcoo  RCB6406_6412-DEMO.uvoptx  RCB6406_6412-DEMO.uvprojx
stm32_motor/remote_control_demo/官方遥控资料/: remote_.md
stm32_motor/remote_control_pio/: OPTIMIZATION_GUIDE.md  README.md  platformio.ini
stm32_motor/remote_control_pio/include/: config.h  keys.h
stm32_motor/stm32_cmake/Debug/: dpj.map  makefile  objects.list
stm32_motor/stm32_cmake/build_cmake/: CMakeLists.txt  README.md
stm32_motor/stm32_cmake/build_cmake/cmake/: arm-none-eabi.cmake
stm32_motor/stm32_cmake/docs/: CMAKE_UPLOAD_GUIDE.md
stm32_motor/stm32_cmake/stm32_cmake_build/: README.md
stm32_motor/stm32_cmake/stm32_cmake_build/examples/basic_blink/: CMakeLists.txt
stm32_motor/stm32_cmake/stm32_cmake_build/examples/basic_blink/Core/Inc/: main.hpp
stm32_motor/stm32_cmake/stm32_cmake_build/examples/basic_blink/Core/Src/: main.cpp
stm32_motor/stm32_i2c/: platformio.ini
stm32_motor/stm32_i2c/docs/: ACTUAL_KEY_MAPPING.md  LED_DEBUG_GUIDE.md
stm32_motor/stm32_i2c/examples/: bluetooth_control_example.cpp
stm32_motor/stm32_i2c/include/: gpio.h  tim.h
stm32_motor/stm32_i2c/src/: gpio.c  main.cpp
stm32_motor/stm32_pio/: BLUETOOTH_QUICK_START.md  README.md  platformio.ini
stm32_motor/stm32_pio/docs/: ARCHITECTURE.md  BLUETOOTH_CONTROL_GUIDE.md  E49_WIRELESS_README.md  LED_ASCII_DEBUG.md  README.md
stm32_motor/stm32_pio/include/: common.h  drive_train.hpp  e49_wireless.hpp  gpio.h  line_follower.hpp  line_sensor.hpp  motor.hpp  remote_control.hpp  usart.h
stm32_motor/stm32_pio/src/: adc.c  drive_train.cpp  (+8 more)
stm32_servo/: VSCode+命令行开发迁移指南.md
stm32_servo/01_platformio_migrated/: platformio.ini
stm32_servo/02_cmake_from_scratch/: STM32F103VETx_FLASH.ld
(+363 files in other folders)
